// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders as ol 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 1px;
  content: counter(list-counter) ". ";
  color: #4A545E;
  font-size: 15px;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

<ol
  class="c0"
>
  <li>
    I am a list item
  </li>
</ol>
`;

exports[`<List /> renders as ul 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 8px;
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 8px;
  background-color: #4A545E;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

<ul
  class="c0"
>
  <li>
    I am a list item
  </li>
</ul>
`;

exports[`<List /> renders nested lists 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 8px;
  content: '';
  width: 8px;
  height: 8px;
  border-radius: 8px;
  background-color: #4A545E;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

.c1 {
  position: relative;
  counter-increment: list-counter;
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li
    class="c1"
  >
    <p>
      I am a list item
    </p>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <p>
          I am a list item
        </p>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`<List /> renders with icon 1`] = `
.c0 {
  padding-left: 28px;
  counter-reset: list-counter;
}

.c0 > li:not(.has-icon):before {
  padding: 0;
  left: -25px;
  display: inline-block;
  position: absolute;
  top: 1px;
  content: counter(list-counter) ". ";
  color: #4A545E;
  font-size: 15px;
}

.c0 > li.has-icon svg {
  padding: 0;
  left: -28px;
  top: 4px;
  display: inline-block;
  position: absolute;
  width: 16px;
  height: 16px;
}

.c1 {
  position: relative;
  counter-increment: list-counter;
  list-style: none;
  padding: 0;
}

<ol
  class="c0"
>
  <li
    class="c1 has-icon "
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-coffee fa-w-20 "
      data-icon="coffee"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 640 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        fill="currentColor"
      />
    </svg>
    I am a list item
  </li>
</ol>
`;
